# sagittarius-scheme

./: .gitattributes  .gitignore  .hgignore  .travis.yml  AGENTS.md  CMakeLists.txt  COPYING  ChangeLog  Copyright  HACKING  HACKING.md  README  README.md  TODO  autogen.sh  autogenstub.sh  bitbucket-pipelines.yml  cmake_uninstall.cmake.in  dist.bat  dist.sh  dist.sh.in  geninsn.sh  rebase.sh.in  repl.scm  run-test.bat  run-test.scm  run-test.sh  test.scm  test2.scm  test3.scm
cmake/: CMakeLists.txt  CheckAlloca.cmake  CheckPthreadFlag.cmake  CheckStructExists.cmake  CheckVariable.cmake  CopyTarget.cmake  FindGC.cmake  FindLibFFI.cmake  FindODBC.cmake  FindSSE.cmake  FixupCompilerFlags.cmake  Parameters.cmake  Toolchain-QNX-8.0.0.cmake  Toolchain-Ubuntu-mingw32.cmake  Toolchain-Ubuntu-mingw64.cmake  Triple.cmake  Utilities.cmake  config-cmake.h.in  sagittarius-config.in  sagittarius-package.in  sagittarius.pc.in
cmake/patches/: dyn_load.c.patch  gc.qnx.patch  gcconfig.h.patch
doc/: CMakeLists.txt  clos.md  clos.scrbl  gendoc  ported.md  ported.scrbl  r6rs.md  r6rs.scrbl  r7rs.md  r7rs.scrbl  sagittarius-ref.md  sagittarius-ref.odt  sagittarius-ref.scrbl  sagittarius-ref.scrbl.ja  sagittarius.md  sagittarius.scrbl  sagittarius.scrbl.ja  srfi.md  srfi.scrbl  utils.md  utils.scrbl
doc/lib/: style.css  tools.js
doc/ported/: json.md  json.scrbl  match.md  match.scrbl  packrat.md  packrat.scrbl  ssax.scrbl  text.scrbl
doc/rnrs/: arithmetic.md  arithmetic.scrbl  base.md  base.scrbl  bytevectors.md  bytevectors.scrbl  composite.md  composite.scrbl  conditions.md  conditions.scrbl  control.md  control.scrbl  enums.md  enums.scrbl  exceptions.md  exceptions.scrbl  files.md  files.scrbl  hashtables.md  hashtables.scrbl  io.md  io.scrbl  lists.md  lists.scrbl  programs.md  programs.scrbl  sorting.md  sorting.scrbl  syntax-case.md  syntax-case.scrbl  unicode.md  unicode.scrbl
doc/sagittarius/: atomic.md  continuations.md  control.md  control.scrbl  crypto.md  debug.md  debug.scrbl  ffi.md  ffi.scrbl  filewatch.md  filewatch.scrbl  generators.md  generators.scrbl  io.md  io.scrbl  mop.md  mop.scrbl  object.md  object.scrbl  pam.md  process.md  process.scrbl  pty.md  reader.md  reader.scrbl  record.md  record.scrbl  regex.md  regex.scrbl  socket.md  socket.scrbl  threads.md  threads.scrbl  timezone.md  timezone.scrbl
doc/utils/: archive.md  archive.scrbl  asn.1.md  asn.1.scrbl  buffer.md  buffer.scrbl  bytevector.md  bytevector.scrbl  concurrent.md  concurrent.scrbl  crypto.md  crypto.scrbl  dbi.md  dbi.scrbl  dbm.md  dbm.scrbl  deque.md  deque.scrbl  duration.md  file.md  file.scrbl  getopt.md  getopt.scrbl  hashtables.md  hashtables.scrbl  heap.md  heap.scrbl  list.md  list.scrbl  logging.md  logging.scrbl  math.md  math.scrbl  odbc.md  odbc.scrbl  peg.md  peg.scrbl  queue.md  queue.scrbl  rpc.md  (+9 more)
ext/: CMakeLists.txt  CMakeLists.txt.in  addstub.cmake  all-tests.scm  body.tmpl  genstub  genstub.bat  gentmpl.scm  header.tmpl
ext/atomic/: CMakeLists.txt  atomic.stub  sagittarius-atomic.c  sagittarius-atomic.h  test.scm
ext/crypto/: CMakeLists.txt  bytevector.stub  cipher.stub  crypto.c  crypto.h  crypto.scm  crypto_stub.c  crypto_stub.stub  digest.stub  ec-fields.stub  hash.c  kdf.stub  key.c  mac.stub  math.c  math.h  math.scm  math_stub.c  math_stub.stub  prng.c  random.c  random.stub  sagittarius-cipher.c  sagittarius-cipher.h  sagittarius-digest.c  sagittarius-digest.h  sagittarius-ec.c  sagittarius-ec.h  sagittarius-mac.c  sagittarius-mac.h  sagittarius-math.c  sagittarius-math.h  sagittarius-random.c  sagittarius-random.h  sagittarius-salsa.c  sagittarius-salsa.h  sagittarius-secure.c  sagittarius-stream.c  sagittarius-stream.h  sagittarius-tomcrypt.c  (+21 more)
ext/ffi/: CMakeLists.txt  ffi.c  ffi.h  ffi_dummy.c  ffi_stub.c  ffi_stub.stub  sagittarius-ffi.c  sagittarius-ffi.h  test-lib.c  test.scm
ext/filewatch/: CMakeLists.txt  dummy_watch.c  filewatch.c  filewatch.h  filewatch_stub.stub  fsevents_watch.c  inotify_watch.c  kqueue_watch.c  test.scm  windows_watch.c
ext/odbc/: CMakeLists.txt  odbc.c  odbc.h  odbc.scm  odbc_stub.c  odbc_stub.stub
ext/process/: CMakeLists.txt  posix.c  process.c  process.h  process_stub.c  process_stub.stub  sagittarius-process.c  sagittarius-process.h  test-kill.c  test-proc.c  test-sem.c  test-shm.c  test.scm  win.c
ext/regex/: CMakeLists.txt  regex.c  regex.h  regex2.c  regex2.h  regex2_stub.stub  regex_stub.c  regex_stub.stub  test-regex2.scm  test.scm
ext/socket/: CMakeLists.txt  raise_incl.incl  sagittarius-socket.c  sagittarius-socket.h  selector-epoll.c  selector-iocp.c  selector-kqueue.c  selector-win.c  selector.stub  socket-selector.c  socket-selector.h  socket-selector.incl  socket.c  socket.h  socket_stub.c  socket_stub.stub  test.scm  tls-socket.c  tls-socket.h  tls_openssl.c  tls_socket_stub.stub  tls_win.c  unix-socket-selector.incl
ext/stty/: CMakeLists.txt  sagittarius-stty.h  sagittarius-termios.h  stty.c  stty.posix.c  stty.win.c  stty_stub.stub  termios.c  win_termios.h
ext/termios/: CMakeLists.txt  gen-termios-incl.scm  ppty.h  pty.h  pty.stub  pty_posix.c  pty_windows.c  sagittarius-pty.c  sagittarius-pty.h  sagittarius-termios.h  termios.c  termios_stub.stub  win_termios.c  win_termios.h
ext/threads/: CMakeLists.txt  genstub  mutex.c  test.scm  threads.c  threads.h  threads_stub.c  threads_stub.stub
ext/time/: CMakeLists.txt  date.c  date_stub.c  date_stub.stub  sagittarius-time.c  (+9 more)
src/: CMakeLists.txt  atomic.c  bignum.c  bignum.inc  bits.c  builtin-keywords.c  builtin-symbols.c  bytevector.c  c99_flonum.h  cache.c  cache_read.inc  cache_write.inc  charset.c  clos.c  closlib.c  closlib.stub  closure.c  code.c  codec.c  collection.c  compare.c  compiler-aux.c  compiler.c  core.c  dl_dlopen.c  dl_win.c  error.c  exceptions.c  extlib.c  extlib.stub  file.c  flonum.stub  flonums.stub  gc-incl.inc  generic.c  geninsn  genlib  genlib.targets  genstub  gloc.c  (+77 more)
test/: CMakeLists.txt  call-cc.scm  data.csv  jmespath-tests.scm  json-schema-tests.scm  runner.scm  sample.scm  syntax-case.scm  syntax-rules.scm  tests.scm
(+1965 files in other folders)
